{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 311,
  "lineage": "bf631758-ceaf-7ce0-a77f-14da29c169e3",
  "resources": [
    {
      "module": "module.able-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_cluster_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b3c7a5370b29329",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-0448425ebd7fd22a1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:us-east-2:977373308795:key/c888b569-380c-4b7b-b9d2-d8a2841167a7",
                "throughput": 125,
                "volume_id": "vol-060bf10f846554c54",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "able-8akNtK9QN75eYLnw-fb_cluster_node_profile",
            "id": "i-0448425ebd7fd22a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.12xlarge",
            "ipv6_address_count": 0,
            "key_name": "able-8akNtK9QN75eYLnw-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0415b47e5022abda4",
            "private_dns": "ip-10-0-106-197.us-east-2.compute.internal",
            "private_ip": "10.0.106.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ac0616b3f7c9379",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0319dde319380326f",
            "tags": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-cluster-0",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-cluster-0",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b359e17f4e8d2e80"
            ]
          },
          "dependencies": [
            "module.able-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.able-cluster.aws_iam_role.fb_cluster_node_role",
            "module.able-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.able-cluster.aws_security_group.featurebase",
            "module.able-cluster.data.aws_ami.amazon_linux_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b3c7a5370b29329",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-0d53c5538265b1c0b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:us-east-2:977373308795:key/c888b569-380c-4b7b-b9d2-d8a2841167a7",
                "throughput": 125,
                "volume_id": "vol-0ea2fb4ea44b7ac76",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "able-8akNtK9QN75eYLnw-fb_cluster_node_profile",
            "id": "i-0d53c5538265b1c0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.12xlarge",
            "ipv6_address_count": 0,
            "key_name": "able-8akNtK9QN75eYLnw-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-05fc44f75e099b242",
            "private_dns": "ip-10-0-105-217.us-east-2.compute.internal",
            "private_ip": "10.0.105.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-023aa2f6bf686a161",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0517ca9a646d80f88",
            "tags": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-cluster-1",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-cluster-1",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b359e17f4e8d2e80"
            ]
          },
          "dependencies": [
            "module.able-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.able-cluster.aws_iam_role.fb_cluster_node_role",
            "module.able-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.able-cluster.aws_security_group.featurebase",
            "module.able-cluster.data.aws_ami.amazon_linux_2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b3c7a5370b29329",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-0d90093a2524346af",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:us-east-2:977373308795:key/c888b569-380c-4b7b-b9d2-d8a2841167a7",
                "throughput": 125,
                "volume_id": "vol-01e2e1c3e9d47f47a",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "able-8akNtK9QN75eYLnw-fb_cluster_node_profile",
            "id": "i-0d90093a2524346af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.12xlarge",
            "ipv6_address_count": 0,
            "key_name": "able-8akNtK9QN75eYLnw-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-04663f27928345da7",
            "private_dns": "ip-10-0-104-40.us-east-2.compute.internal",
            "private_ip": "10.0.104.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0efe061e66ecfe875",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a7b685ed27eb1cf",
            "tags": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-cluster-2",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-cluster-2",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b359e17f4e8d2e80"
            ]
          },
          "dependencies": [
            "module.able-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.able-cluster.aws_iam_role.fb_cluster_node_role",
            "module.able-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.able-cluster.aws_security_group.featurebase",
            "module.able-cluster.data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "module": "module.able-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b3c7a5370b29329",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-05bc831873de67a77",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:us-east-2:977373308795:key/c888b569-380c-4b7b-b9d2-d8a2841167a7",
                "throughput": 125,
                "volume_id": "vol-09e514ff741301695",
                "volume_size": 500,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "able-8akNtK9QN75eYLnw-fb_cluster_node_profile",
            "id": "i-05bc831873de67a77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "able-8akNtK9QN75eYLnw-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-010ed0be0f2b69733",
            "private_dns": "ip-10-0-101-78.us-east-2.compute.internal",
            "private_ip": "10.0.101.78",
            "public_ip": "3.139.98.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c66e54e1e8765e98",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066b4b922b54e51a2",
            "tags": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-ingest-0",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "ingest_node"
            },
            "tags_all": {
              "Name": "able-8akNtK9QN75eYLnw-featurebase-ingest-0",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "ingest_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da5a1ac02f59fccc"
            ]
          },
          "dependencies": [
            "module.able-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.able-cluster.aws_iam_role.fb_cluster_node_role",
            "module.able-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.able-cluster.aws_security_group.ingest",
            "module.able-cluster.data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "module": "module.able-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "featurebase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977373308795:security-group/sg-0b359e17f4e8d2e80",
            "description": "Allow featurebase inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b359e17f4e8d2e80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp from Anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal 2",
                "from_port": 10401,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10401
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal",
                "from_port": 10301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10301
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.31.0.0/16"
                ],
                "description": "GRPC from Internal",
                "from_port": 20101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.31.0.0/16"
                ],
                "description": "HTTP from Internal",
                "from_port": 10101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL from Internal",
                "from_port": 55432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55432
              }
            ],
            "name": "able-8akNtK9QN75eYLnw-allow_featurebase",
            "name_prefix": "",
            "owner_id": "977373308795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "able-8akNtK9QN75eYLnw-allow_featurebase",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "allow_featurebase"
            },
            "tags_all": {
              "Name": "able-8akNtK9QN75eYLnw-allow_featurebase",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "allow_featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a26a122f961dc2b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.able-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977373308795:security-group/sg-0da5a1ac02f59fccc",
            "description": "Allow ingest inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da5a1ac02f59fccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10101,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp from Anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "able-8akNtK9QN75eYLnw-allow_ingest",
            "name_prefix": "",
            "owner_id": "977373308795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "able-8akNtK9QN75eYLnw-allow_ingest",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "allow_ingest"
            },
            "tags_all": {
              "Name": "able-8akNtK9QN75eYLnw-allow_ingest",
              "Prefix": "able-8akNtK9QN75eYLnw",
              "Role": "allow_ingest"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a26a122f961dc2b"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}